force-app/main/default/objects/Returns__c/Returns__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <displayFormat>RTN-{0000}</displayFormat>
        <label>Returns Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>