force-app/main/default/objects/Returns__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(
Invoice__r.RecordType.DeveloperName = &quot;Secondary_Invoice&quot;,
Invoice__r.Retailer_Account__r.Name,
IF(
Invoice__r.RecordType.DeveloperName = &quot;Secondary_Invoice_Under_SS&quot;,
Invoice__r.Under_SS__r.Name,
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>