force-app/main/default/objects/Returns__c/fields/Net_Invoice_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Amount_Incl_Tax__c</fullName>
    <formula>if(
   Total_return_Incl_tax__c &gt;= Invoice__r.Invoice_Amount__c ,
   0 ,
   Invoice__r.Invoice_Amount__c  -  Total_return_Incl_tax__c
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Invoice Amount Incl Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>