force-app/main/default/objects/Returns__c/fields/Net_Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Quantity__c</fullName>
    <formula>Invoice__r.Total_Quantity__c -  Total_return_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Invoice Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>