force-app/main/default/objects/Returns__c/fields/Total_return_Incl_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_return_Incl_tax__c</fullName>
    <formula>Return_Amount__c + CGST__c + SGST__c +  IGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total return(Incl tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>