force-app/main/default/objects/Returns__c/fields/Total_return_quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_return_quantity__c</fullName>
    <label>Total return quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>