force-app/main/default/objects/Returns__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Order__c</columns>
    <columns>Return_Amount__c</columns>
    <columns>Total_return_quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>